dark mode toggle fix

--- a/src/styles/DarkMode.css
+++ b/src/styles/DarkMode.css
@@ -22,6 +22,7 @@
   border: none;
   padding: 0;
   outline: none;
+   -webkit-tap-highlight-color: transparent;
 }
 
 .darkmode-toggle:focus,
@@ -31,11 +32,11 @@
   box-shadow: none;
 }
 
-
-body.dark-mode .darkmode-toggle {
-  transition: all 0.6s ease;
+.darkmode-toggle,
+.darkmode-toggle * {
+  background-color: transparent !important;
+  box-shadow: none !important;
 }
-
 
 /* Dark mode styles */
 body.dark-mode {
